# tessera-slides

./: .gitattributes  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
deprecation-shim/: README.md  pyproject.toml  tessera_slides.py
docs/: conf.py  demo.md  index.md  quickstart.md  requirements.txt
docs/_static/: embed.css  example1.html  github-edit-icon.js  quick-start-report.html  title-sections-example.html
docs/_static/deck/: cell_types.html  layout.html  links.html  tabulator.html  title-sections-example.html
docs/_static/slides/: cell_types.html  layout.html
docs/examples/cell_types/: cell_types.py
docs/examples/example1/: example1.py
docs/examples/layout/: layout.py
docs/examples/links/: links.py
docs/examples/quickstart/: quickstart.py
docs/examples/structure/: structure.py
docs/examples/tabulator/: tabulator.py
docs/sections/: api.md  cell-types.md  demo.md  layout-templates.md  links.md  live-editing.md  plugins.md  quickstart.md  security.md  slide-ids.md  structure.md  tabulator.md
montin/: __init__.py  exceptions.py
montin/cells/: __init__.py  base.py  image.py  image_slider.py  matplotlib.py  misc.py  plotly.py  table.py  tabulator.py  text.py
montin/core/: assembler.py  deck.py  plugins.py  security.py  slide.py
montin/static/js/: README.md  boot.js  charts.js  copy.js  keyboard.js  lightbox.js  navigation.js  sidebar.js  slider.js  stage.js  state.js  toolbar.js  touch.js  view.js  zoom.js
montin/templates/: base.html  cell_code.html  cell_empty.html  cell_html.html  cell_iframe.html  cell_image.html  cell_image_slider.html  cell_list.html  cell_matplotlib.html  cell_matplotlib_svg.html  cell_mermaid.html  cell_metric.html  cell_plotly.html  cell_table.html  cell_tabulator.html  cell_text.html
montin/themes/academic/: layout.css  metric.css  slide.css
montin/themes/dark/: layout.css
montin/themes/default/: code.css  image.css  layout.css  list.css  metric.css  slide.css  table.css  tabulator.css  toolbar.css
montin/themes/light/: layout.css  metric.css
montin/themes/light-blue/: layout.css  metric.css
montin/themes/sobrio/: layout.css  metric.css
montin/utils/: image_encoder.py  media.py  notebook.py  resource_loader.py  tabular.py  theme_resolver.py  vendor.py
scripts/: update_vendor.py
tessera/: __init__.py
tessera/cells/: __init__.py  base.py  image.py  image_slider.py  matplotlib.py  misc.py  plotly.py  table.py  tabulator.py  text.py
tessera/core/: assembler.py  deck.py  plugins.py  slide.py  slides.py
tessera/static/: main.js
tessera/static/js/: boot.js  charts.js
tessera/templates/: base.html  cell_list.html  cell_matplotlib.html  cell_matplotlib_svg.html  cell_mermaid.html  cell_metric.html  cell_tabulator.html
tessera/themes/default/: layout.css  metric.css  slide.css  tabulator.css  toc.css
tessera/themes/sobrio/: slide.css
tessera/utils/: media.py  notebook.py  resource_loader.py  tabular.py  theme_resolver.py  vendor.py
tests/: conftest.py  test_cells.py  test_fontscale.py  test_media.py  test_notebook_unique.py  test_plugins.py  test_preview.py  test_security.py  test_slide.py  test_slides.py  test_tabulator.py  test_themes.py  test_write.py
