[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "montin"
version = "0.6.0"
description = "Generate self-contained, interactive HTML reports from data in Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "André Rezende Dessimoni Carvalho", email = "andre.rdc@outlook.com" },
]
keywords = [
    "report", "dashboard", "html", "data", "analytics",
    "visualization", "plotly", "mermaid", "self-contained", "notebook",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
    "jinja2>=3.1",
]

[project.optional-dependencies]
markdown = ["markdown-it-py>=3.0"]   # render markdown strings in add_text
image    = ["pillow>=9.0"]           # WebP conversion for images/figures
full     = ["markdown-it-py>=3.0", "pillow>=9.0"]
dev      = [
    "pytest>=8.0", "pytest-cov", "ruff>=0.4", "mypy>=1.10", "build", "twine",
    "plotly>=5.0", "pandas>=1.5", "matplotlib>=3.5",
]

[project.urls]
Homepage      = "https://github.com/andre-dessimoni/montin"
Repository    = "https://github.com/andre-dessimoni/montin"
Issues        = "https://github.com/andre-dessimoni/montin/issues"
Documentation = "https://montin.readthedocs.io/"

[tool.setuptools.packages.find]
where   = ["."]
include = ["montin*"]

[tool.setuptools.package-data]
"montin" = [
    "templates/*.html",
    "themes/**/*.css",
    "static/*.js",
    "static/js/*.js",
    "static/vendor/**/*",
    "py.typed",
]
"montin.themes.default"    = ["*.css"]
"montin.themes.light"      = ["*.css"]
"montin.themes.dark"       = ["*.css"]
"montin.themes.light-blue" = ["*.css"]
"montin.themes.academic"   = ["*.css"]
"montin.themes.sobrio"     = ["*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
